[gd_scene load_steps=15 format=3 uid="uid://5e57csbpkpwh"]

[ext_resource type="Script" path="res://Scripts/scoring.gd" id="1_0ttay"]
[ext_resource type="FontFile" uid="uid://dxrgyguc77yru" path="res://Fonts/7SEGMENTALDIGITALDISPLAY.ttf" id="2_dvbht"]
[ext_resource type="FontFile" uid="uid://dlblxlar8xkm3" path="res://Fonts/CODE Bold.otf" id="2_jwy62"]
[ext_resource type="Texture2D" uid="uid://cf7ukgd024aea" path="res://Graphics/Clock.png" id="2_qd45c"]
[ext_resource type="Texture2D" uid="uid://cvpfgbthry47y" path="res://Graphics/Note.png" id="4_llou2"]
[ext_resource type="FontFile" uid="uid://defj40fio570l" path="res://Fonts/Fragmentcore.otf" id="6_xbnp4"]
[ext_resource type="AudioStream" uid="uid://bkue388v5g63n" path="res://Sounds/17216__meatball4u__countdown.wav" id="7_cm26c"]

[sub_resource type="LabelSettings" id="LabelSettings_t37yf"]
font = ExtResource("2_jwy62")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_ivfmg"]
font = ExtResource("2_dvbht")
font_size = 20
outline_size = 1

[sub_resource type="LabelSettings" id="LabelSettings_ktjm6"]
font = ExtResource("6_xbnp4")
font_size = 30
font_color = Color(0, 0, 0, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8crq7"]
font = ExtResource("2_jwy62")
font_size = 90
font_color = Color(1, 1, 1, 0)
outline_size = 2

[sub_resource type="Animation" id="Animation_bs0y7"]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FASTER!:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FASTER!:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(217, -150)]
}

[sub_resource type="Animation" id="Animation_jr7nl"]
resource_name = "faster"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FASTER!:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1.2),
"transitions": PackedFloat32Array(-0.353553, -0.5),
"update": 0,
"values": [Vector2(217, -150), Vector2(217, 450)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FASTER!:label_settings:font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.45, 0.5, 0.55, 0.95, 1, 1.05, 1.2),
"transitions": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ey7wh"]
_data = {
"RESET": SubResource("Animation_bs0y7"),
"faster": SubResource("Animation_jr7nl")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -360.0
offset_top = -330.0
offset_right = -175.0
offset_bottom = -270.0
script = ExtResource("1_0ttay")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 11.0
offset_right = 200.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
text = "Score: 0"
label_settings = SubResource("LabelSettings_t37yf")

[node name="Clock" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 346.0
offset_right = 312.0
offset_bottom = 394.0
texture = ExtResource("2_qd45c")
stretch_mode = 4

[node name="TimeLabel" type="Label" parent="Clock"]
layout_mode = 0
offset_left = 26.0
offset_top = 11.0
offset_right = 86.0
offset_bottom = 37.0
text = "30.00"
label_settings = SubResource("LabelSettings_ivfmg")
vertical_alignment = 1

[node name="Note" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 349.0
offset_right = 509.0
offset_bottom = 394.0
texture = ExtResource("4_llou2")

[node name="ListLabel" type="Label" parent="Note"]
layout_mode = 0
offset_top = 13.0
offset_right = 300.0
offset_bottom = 47.0
scale = Vector2(0.6, 0.6)
text = "101 102 103 104 105"
label_settings = SubResource("LabelSettings_ktjm6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FASTER!" type="Label" parent="."]
layout_mode = 0
offset_left = 217.0
offset_top = -150.0
offset_right = 505.0
offset_bottom = -22.0
text = "FASTER!"
label_settings = SubResource("LabelSettings_8crq7")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ey7wh")
}

[node name="Tick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_cm26c")
